方块展示实体能被正常移除